# Thesis_Project

./: README.md  old_cluster_method.R  pre_process.py
Client_300high_bladder/client/: Cargo.toml
Client_300high_bladder/client/src/: main.rs
Enclave_300high_bladder/encalve/: Cargo.toml
Enclave_300high_bladder/encalve/src/: loss_functions.rs  main.rs  training.rs  utils.rs
