[package]
name = "client"
version = "0.1.0"
authors = ["'laocaoshilaocao' <'laocaomail@gmail.com'>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray-csv = "0.5.1"
csv = "1.1"
ndarray = "0.12.1"
byteorder = "1.3.2"
aes = "0.7.4"
hex-literal = "0.3.1"
block-modes = "0.8.1"
