[package]
name = "rust_t"
version = "0.1.0"
authors = ["'laocaoshilaocao' <'laocaomail@gmail.com'>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
autograd = { version = "1.1.0"}
rand = "0.8.3"
statrs = "0.13.0"
ndarray = "0.12.1"
byteorder = "1"
aes = "0.7.4"
hex-literal = "0.3.1"
block-modes = "0.8.1"
